Fixing some spacing issues.

--- a/src/css/screen.scss
+++ b/src/css/screen.scss
@@ -166,7 +166,7 @@ footer {
 	justify-content: space-between;
 
 	img {
-		height: 16.05vw;
+		height: 16.03vw;
 	}
 }
 
